src/test/testData/inspections/variables.elambda
data Ctr(x, y) = Ctr(x, y);
data Pair(fst, snd) = Pair(fst, snd);
id = lam (x) -> Ctr(x, <error descr="Variable 'y' is unbound">y</error>);
test = id(<error descr="Variable 'arg' is unbound">arg</error>);
caselam =
    lam (pair, other) ->
        case pair of {
             Pair(fst, snd) -> Pair(snd, <error descr="Variable 'unknown' is unbound">unknown</error>);
        };
